<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        tools:context=".MainActivity">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/sectionEnterPlace"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_margin="10dp"
            app:boxBackgroundColor="@color/white"
            app:startIconTint="@color/white"
            app:endIconTint="@color/red"
            app:boxStrokeColor="@color/orange"
            android:hint="@string/enterAreaObject"
            app:hintTextColor="@color/white"
            app:startIconDrawable="@drawable/ic_baseline_add_home_24"
            app:startIconContentDescription="home"
            app:endIconMode="clear_text"
            app:boxStrokeWidthFocused="4dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/enterPlace"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:textColor="@color/white"
                android:fontFamily="@font/kelly"
                android:textCursorDrawable="@drawable/ic_baseline_add_home_24"
                app:backgroundTint="@android:color/transparent"/>

        </com.google.android.material.textfield.TextInputLayout>


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/headerType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:layout_constraintTop_toBottomOf="@id/sectionEnterPlace"
            android:textAlignment="center"
            android:text="@string/selectTypeRepair"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:fontFamily="@font/kelly"/>

        <RadioGroup
            android:id="@+id/sectTypeRepair"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/headerType">

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/draftRepair"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/draftRepair"
                android:fontFamily="@font/roboto"/>

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/cosmetiqRepair"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/cosmetiqRepair"
                android:fontFamily="@font/roboto"/>

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/capitalRepair"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/capitalRepair"
                android:fontFamily="@font/roboto"/>

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/euroRepair"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/euroRepair"
                android:fontFamily="@font/roboto"/>

        </RadioGroup>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/headerLift"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:layout_constraintTop_toBottomOf="@id/sectTypeRepair"
            android:textAlignment="center"
            android:textSize="20dp"
            android:fontFamily="@font/kelly"
            android:text="@string/selectTypeLift"
            android:textColor="@color/white"/>

        <RadioGroup
            android:id="@+id/sectLift"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/headerLift">

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/notLift"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/notLift"
                android:fontFamily="@font/roboto"/>

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/passengerLift"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/passengerLift"
                android:fontFamily="@font/roboto"/>

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/allLift"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/allLift"
                android:fontFamily="@font/roboto"/>

        </RadioGroup>


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/headerLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:layout_constraintTop_toBottomOf="@id/sectLift"
            android:textAlignment="center"
            android:text="@string/selectLocation"
            android:textSize="20dp"
            android:fontFamily="@font/kelly"
            android:textColor="@color/white"/>

        <RadioGroup
            android:id="@+id/sectLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/headerLocation">

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/locationRostov"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/city"
                android:fontFamily="@font/roboto"/>

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/locationRostovRegion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/region"
                android:fontFamily="@font/roboto"/>

        </RadioGroup>



        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/sectionEnterDistanceObject"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/sectLocation"
            android:layout_margin="10dp"
            app:boxBackgroundColor="@color/white"
            app:startIconTint="@color/white"
            app:endIconTint="@color/red"
            app:boxStrokeColor="@color/orange"
            android:hint="@string/enterDistanceObject"
            app:hintTextColor="@color/white"
            app:startIconDrawable="@drawable/ic_baseline_add_home_24"
            app:startIconContentDescription="home"
            app:endIconMode="clear_text"
            app:boxStrokeWidthFocused="4dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/enterDistanceObject"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:textColor="@color/white"
                android:textCursorDrawable="@drawable/ic_baseline_add_home_24"
                app:backgroundTint="@android:color/transparent"/>

        </com.google.android.material.textfield.TextInputLayout>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/calculations"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/sectionEnterDistanceObject"
            android:background="@color/orange"
            android:textColor="@color/black"
            android:fontFamily="@font/kelly"
            android:textStyle="bold"
            android:text="@string/calculations"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:layout_constraintTop_toBottomOf="@id/calculations"
            android:textAlignment="center"
            android:textColor="@color/red"
            android:textSize="20dp"
            android:fontFamily="@font/kelly"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
